--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,11 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
+# Play Filters
+# ~~~~
+# sets X-Content-Type-Options, “nosniff” by default.
+play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
+
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
