--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,6 +48,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
 play.filters.https.strictTransportSecurity = "max-age=31536000; includeSubDomains"
 play.filters.enabled += play.filters.https.RedirectHttpsFilter
+play.filters.https.redirectEnabled = false
 
 # Play Modules
 # ~~~~
